# chebnet-kaist

./: .gitignore  README.md  pyproject.toml
checkpoints/: best_model_chebnet.pth
configs/: default.yaml  train_chebnet.yaml
data/kaist/: README.md
src/chebnet_kaist/: __init__.py  constants.py
src/chebnet_kaist/cli/: __init__.py  evaluate.py  setup_data.py  train.py
src/chebnet_kaist/config/: __init__.py  loader.py  schema.py
src/chebnet_kaist/data/: __init__.py
src/chebnet_kaist/data/cache/: __init__.py  kaist.py  paths.py
src/chebnet_kaist/data/graphs/: __init__.py  builder.py
src/chebnet_kaist/data/ingestion/: __init__.py  kaist_loader.py  kaist_manifest.py
src/chebnet_kaist/data/preprocessing/: __init__.py  segments.py
src/chebnet_kaist/data/providers/: __init__.py  base.py  experiment.py  kaist.py  registry.py
src/chebnet_kaist/evaluation/: __init__.py  checkpoint_loader.py  evaluator.py  metrics_tables.py
src/chebnet_kaist/evaluation/analysis/: __init__.py  graph.py  training.py
src/chebnet_kaist/evaluation/plots/: __init__.py  classification.py  embeddings.py  networkx_viz.py  style.py
src/chebnet_kaist/evaluation/reports/: __init__.py  builder.py  io.py  runner.py  utils.py
src/chebnet_kaist/models/: __init__.py  base.py  chebnet.py  factory.py
src/chebnet_kaist/training/: __init__.py  metrics.py  trainer.py
src/chebnet_kaist/utils/: __init__.py  seed.py
