[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chebnet-kaist"
version = "0.1.0"
description = "ChebNet-based CAN bus intrusion detection on KAIST graphs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torch-geometric>=2.4.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0.0",
    "scipy>=1.11.0",
    "umap-learn>=0.5.0",
    "networkx>=3.0",
]

[project.scripts]
chebnet-kaist-train = "chebnet_kaist.cli.train:main"
chebnet-kaist-eval = "chebnet_kaist.cli.evaluate:main"
chebnet-kaist-setup-data = "chebnet_kaist.cli.setup_data:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chebnet_kaist"]

[tool.hatch.build.targets.sdist]
packages = ["src/chebnet_kaist"]
